--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Webpack tutorial</title>
-</head>
-<body>
-    <h1>Hello webpack!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Webpack Tutorial</title>
+  </head>
+  <body>
+    <h1>Hello Webpack!</h1>
+    <p>Hello sass!</p>
+
+    <div id="root"></div>
+  </body>
 </html>
